--- a/docs/style.css
+++ b/docs/style.css
@@ -8,16 +8,16 @@ body {
 canvas {
   display: block;
 }
-.controls {
-  position: absolute;
-  top: 10px;
-  right: 0px;
-  z-index: 10;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+
+.controls_sub {
+  float: left;
+  width: 45%;
 }
+
+.camera_input {
+  width: 30%;
+}
+
 .info {
   position: absolute;
   right: 0px;
