--- a/docs/style.css
+++ b/docs/style.css
@@ -19,12 +19,13 @@ canvas {
 }
 
 .info {
+  font-size: 50%;
   position: absolute;
   right: 0px;
   bottom: 10px;
   z-index: 10;
   background: rgba(255, 255, 255, 0.8);
-  padding: 10px;
+  padding: 3px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
